# pycountry

./: .coveragerc  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  CODEOFCONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  HISTORY.txt  MANIFEST.in  Makefile  PUBLISH.md  README  README.md  README.rst  SECURITY.md  TODO.txt  bitbucket-pipelines.yml  bootstrap.py  bootstrap.sh  buildout.cfg  convert_csv_to_json.py  default.nix  example.py  generate.py  harmonized-system.csv  publish.py  pyproject.toml  pytest.ini  run-drone-io  sections.csv  setup.py  tox.ini  wikipedia_resource_generator.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  issue_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  DOCUMENTATION_REQUEST.md  ENHANCEMENT_REQUEST.md  QUESTION.md
.github/workflows/: check.yml  mypy-check.yml  pre-commit.yaml  test.yml
resources/pycountry/locales/ab/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/ace/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/ach/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/af/LC_MESSAGES/: iso3166-1.mo  iso639-3.mo
resources/pycountry/locales/ak/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/am/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/an/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/ar/LC_MESSAGES/: iso15924.mo  iso3166-1.mo  iso4217.mo  iso639-3.mo
resources/pycountry/locales/as/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/ast/LC_MESSAGES/: iso15924.mo  iso3166-1.mo  iso3166-2.mo  iso4217.mo  iso639-5.mo
resources/pycountry/locales/ay/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/az/LC_MESSAGES/: iso3166-1.mo  iso3166-2.mo
resources/pycountry/locales/ba/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/bar/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/be/LC_MESSAGES/: iso15924.mo  iso3166-1.mo  iso3166-2.mo  iso639-3.mo  iso639-5.mo
resources/pycountry/locales/bg/LC_MESSAGES/: iso15924.mo  iso3166-1.mo  iso3166-2.mo  iso639-3.mo
resources/pycountry/locales/bi/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/bn/LC_MESSAGES/: iso3166-1.mo  iso4217.mo  iso639-3.mo  iso639-5.mo
resources/pycountry/locales/bn_BD/LC_MESSAGES/: iso15924.mo  iso3166-2.mo  iso639-5.mo
resources/pycountry/locales/bn_IN/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/br/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/bs/LC_MESSAGES/: iso3166-1.mo  iso3166-2.mo  iso3166-3.mo
resources/pycountry/locales/byn/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/ca/LC_MESSAGES/: iso3166-1.mo  iso3166-2.mo  iso4217.mo  iso639-3.mo
resources/pycountry/locales/ce/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/ch/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/chr/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/ckb/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/crh/LC_MESSAGES/: iso3166-1.mo  iso3166-2.mo
resources/pycountry/locales/cs/LC_MESSAGES/: iso3166-1.mo  iso3166-2.mo  iso4217.mo
resources/pycountry/locales/csb/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/cv/LC_MESSAGES/: iso15924.mo  iso3166-1.mo
resources/pycountry/locales/cy/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/da/LC_MESSAGES/: iso3166-1.mo  iso3166-2.mo  iso3166-3.mo  iso4217.mo
resources/pycountry/locales/de/LC_MESSAGES/: iso15924.mo  iso3166-1.mo  iso3166-2.mo  iso4217.mo  iso639-3.mo  iso639-5.mo
resources/pycountry/locales/dv/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/dz/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/ee/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/el/LC_MESSAGES/: iso3166-1.mo  iso3166-2.mo  iso4217.mo  iso639-5.mo
resources/pycountry/locales/en/LC_MESSAGES/: iso3166-2.mo
resources/pycountry/locales/eo/LC_MESSAGES/: iso3166-1.mo  iso3166-2.mo  iso4217.mo  iso639-3.mo  iso639-5.mo
resources/pycountry/locales/es/LC_MESSAGES/: iso15924.mo  iso3166-1.mo  iso3166-2.mo  iso4217.mo  iso639-3.mo
resources/pycountry/locales/et/LC_MESSAGES/: iso15924.mo  iso3166-1.mo  iso3166-2.mo  iso639-3.mo
resources/pycountry/locales/eu/LC_MESSAGES/: iso15924.mo  iso3166-1.mo  iso3166-2.mo  iso3166-3.mo  iso4217.mo  iso639-3.mo
resources/pycountry/locales/fa/LC_MESSAGES/: iso3166-1.mo  iso3166-2.mo  iso639-3.mo
resources/pycountry/locales/ff/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/fi/LC_MESSAGES/: iso3166-1.mo  iso3166-2.mo
resources/pycountry/locales/fil/LC_MESSAGES/: iso15924.mo  iso3166-1.mo
resources/pycountry/locales/fo/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/fr/LC_MESSAGES/: iso15924.mo  iso3166-1.mo  iso3166-2.mo  iso4217.mo  iso639-3.mo
resources/pycountry/locales/frp/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/fur/LC_MESSAGES/: iso3166-1.mo  iso3166-3.mo  iso639-3.mo  iso639-5.mo
resources/pycountry/locales/fy/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/ga/LC_MESSAGES/: iso3166-1.mo  iso3166-2.mo
resources/pycountry/locales/gez/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/gl/LC_MESSAGES/: iso3166-1.mo  iso639-3.mo
resources/pycountry/locales/gn/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/gu/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/gv/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/ha/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/haw/LC_MESSAGES/: iso3166-1.mo
resources/pycountry/locales/he/LC_MESSAGES/: iso15924.mo  iso3166-1.mo  iso3166-2.mo  (+1 more)
src/pycountry/: README.txt  __init__.py  db.py  tests.py
src/pycountry/databases/: iso15924.xml  iso3166-1.json  iso3166-2.json  iso3166-3.json  iso3166.xml  iso3166_2.xml  iso4217.json  iso4217.xml  iso639-3.json  iso639.xml  iso639_3.xml
src/pycountry/lexical_resources/: existingcountries_wikipedia_redirects.cleaned.tab
src/pycountry/tests/: test_general.py  test_modify.py
src/pyhscodes/: COPYRIGHT.txt  __init__.py  db.py
src/pyhscodes/databases/: hscodes.json  sections.json
src/pyhscodes/tests/: test_general.py
(+1398 files in other folders)
