[tool.black]
line-length = 80
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 80

[tool.poetry]
name = "pycountry"
version = "23.12.11"
description = "ISO country, subdivision, language, currency and script definitions and their translations"
authors = ["Christian Theune <ct@flyingcircus.io>"]
maintainers = [
	"Nate Schimmoller <nschimmo@gmail.com>",
	"Zachary Ware <zachary.ware@gmail.com>",
	]
license = "LGPL 2.1"
readme = "README.rst"
repository = "https://github.com/flyingcircusio/pycountry"
keywords = [ "country", "subdivision", "language", "currency", "iso", "3166", "639", "4217", "15924", "3166-1","3166-2", "3166-3"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development :: Internationalization",
        "Topic :: Software Development :: Localization"
        ]

[tool.poetry.dependencies]
python = ">=3.8"
importlib-resources = {version = "^5.12.0", python = "<3.9"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
importlib_metadata = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
