[tool.black]
line-length = 80
target-version = ['py39']

[tool.codespell]
# Ignore false-positive on 'Nam', found in tests
ignore-words-list = "nam"

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
exclude = "/locales/"
packages = "pyhscodes"

[tool.poetry]
name = "pyhscodes"
version = "1.0.0"
description = "Harmonized System (HS) codes from the World Customs Organization with hierarchical structure and search capabilities"
authors = ["David Sigley <david@coolset.com>"]
maintainers = [
	"David Sigley <david@coolset.com>",
	]
license = "LGPL-2.1-only"
readme = "README.md"
repository = "https://github.com/sigularusrex/pyhscodes"
homepage = "https://github.com/sigularusrex/pyhscodes"
documentation = "https://github.com/sigularusrex/pyhscodes#readme"
keywords = [ "hs codes", "harmonized system", "customs", "trade", "tariff", "classification", "wco", "world customs organization", "EUDR", "CBAM"]
packages = [{include = "pyhscodes", from = "src"}]
include = [
    "src/pyhscodes/databases/*.json",
    "LICENSE.txt",
    "COPYRIGHT.txt",
]
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Office/Business :: Financial",
        "Topic :: Scientific/Engineering :: Information Analysis"
        ]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
# Note: black and isort are not listed here, as they don't need to be installed
# separately.  pre-commit will take care of running them, and tracking the
# version in use.
mypy = ">1.7.1"
pre-commit = ">3.4.0"
pytest = ">7.1.3"
pytest-cov = ">4.0.0"
tox = ">4.11.4"
zest-releaser = "^9.1.3"
# For zest-releaser
docutils = "<0.21"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov --cov-report=html --cov-report=term-missing"
required_plugins = "pytest-cov>=4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
